--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/grid-systems.css">
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/responsive.css">
-    <title>Document</title>
+    <title>Goya Shop</title>
 </head>
 
 <body>
